--- a/src/mesa/meson.build
+++ b/src/mesa/meson.build
@@ -709,13 +709,25 @@ else
   libmesa_sse41 = []
 endif
 
-libmesa_classic = static_library(
-  'mesa_classic',
-  [files_libmesa_common, files_libmesa_classic],
+libmesa_common = static_library(
+  'mesa_common',
+  [files_libmesa_common],
   c_args : [c_vis_args, c_msvc_compat_args],
   cpp_args : [cpp_vis_args, cpp_msvc_compat_args],
   include_directories : [inc_common, inc_libmesa_asm, include_directories('main')],
   link_with : [libglsl, libmesa_sse41],
+  dependencies : idep_nir_headers,
+  build_by_default : false,
+)
+
+
+libmesa_classic = static_library(
+  'mesa_classic',
+  [files_libmesa_classic],
+  c_args : [c_vis_args, c_msvc_compat_args],
+  cpp_args : [cpp_vis_args, cpp_msvc_compat_args],
+  include_directories : [inc_common, inc_libmesa_asm, include_directories('main')],
+  link_with : [libmesa_common],
   dependencies : idep_nir_headers,
   build_by_default : false,
 )
@@ -734,11 +746,11 @@ endif
 
 libmesa_gallium = static_library(
   'mesa_gallium',
-  [files_libmesa_common, files_libmesa_gallium],
+  [files_libmesa_gallium],
   c_args : [c_vis_args, c_msvc_compat_args, _mesa_gallium_args],
   cpp_args : [cpp_vis_args, cpp_msvc_compat_args, _mesa_gallium_args],
   include_directories : [inc_common, inc_libmesa_asm, include_directories('main')],
-  link_with : [libglsl, libmesa_sse41],
+  link_with : [libmesa_common],
   dependencies : [idep_nir_headers, dep_vdpau],
   build_by_default : false,
 )
